@@ -1,4 +1,10 @@
 ==================================
+Rilascio v2.0.35    del 27/07/2019
+==================================
+
+Parametrizzata la apikey di Google
+
+==================================
 Rilascio v2.0.34    del 27/07/2019
 ==================================
 
